--- a/rendimentus/src/components/profile/profile.css
+++ b/rendimentus/src/components/profile/profile.css
@@ -1,89 +1,99 @@
-*{
-    box-sizing: border-box;
-} 
-.card{
-    color: #00003C;
-    box-shadow: inset 0 0 0.5em #1E2044; 
-    border-radius: 20px;
-    display: flex;
-    font-size: 15px;
-    flex-direction: column;
-    margin: 10px auto;
-    padding: 0 30px 20px;
-    width: 80%;
-    font-weight: 550;
+* {
+  box-sizing: border-box;
 }
-h2{
-    font-family:Roboto Slab;
+
+.card {
+  color: #00003C;
+  box-shadow: inset 0 0 0.5em #1E2044;
+  border-radius: 20px;
+  display: flex;
+  font-size: 15px;
+  flex-direction: column;
+  margin: 10px auto;
+  padding: 0 30px 20px;
+  width: 80%;
+  font-weight: 550;
 }
-p{
-    font-family:Montserrat;
-    margin-block-start: 1px;
-    margin-block-end: 1px;
+
+h2 {
+  font-family: Roboto Slab;
 }
+
+p {
+  font-family: Montserrat;
+  margin-block-start: 1px;
+  margin-block-end: 1px;
+}
+
 .card-account {
-    display: flex;
+  display: flex;
 }
+
 .first-p {
-    margin-right: 20px;
+  margin-right: 20px;
 }
+
 .card-balance {
-    display: flex;
-    margin-top: 10px;
-
+  display: flex;
+  margin-top: 10px;
 }
+
 .bank {
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
+
 .profile-footer {
-    background-color:#1E2044;;
-    display: block;
-    color: #E3B15A;
-    width: 100vw;
-    position: fixed;
-    bottom: 0px;
-    height: 80px;
-}
-.cards-profile{
-    margin-bottom: 100px;
-    margin-top: 20px;
-}
-.cards-products{    
-    margin-top: 80px; 
-}
-h3{
-    color: #00003C;
-    font-family: Montserrat;
-     margin-left: 5%;
+  background-color: #1E2044;
+  display: block;
+  color: #E3B15A;
+  width: 100vw;
+  position: fixed;
+  bottom: 0px;
+  height: 80px;
 }
 
-.creditOffers{    
-    color: #00003C;
-    font-family: Montserrat;
-    display: flex;
-    width: 100%;
-    color:white;
+.cards-profile {
+  margin-bottom: 100px;
+  margin-top: 20px;
 }
 
-.container-warn-icon{
-    width: 20%;
-    font-size: 30px;
-    text-align: center;
-    background:#9D1047;
-    padding: 10px;
+.cards-products {
+  margin-top: 80px;
 }
 
-.container-warn-text{
-    font-size: 13px;
-    width: 80%;
-    padding-top: 10px;
-    padding: 10px;
-    background-image: linear-gradient(to right,#9D1047, #da6491);
+h3 {
+  color: #00003C;
+  font-family: Montserrat;
+  margin-left: 5%;
 }
-    
-@media(min-width: 900px){
-    .creditOffers{
-        justify-content: center;
-        padding-top: 5vh;
-    }
+
+.creditOffers {
+  color: #00003C;
+  font-family: Montserrat;
+  display: flex;
+  width: 100%;
+  color: white;
+}
+
+.container-warn-icon {
+  width: 20%;
+  font-size: 30px;
+  text-align: center;
+  background: #9D1047;
+  padding: 10px;
+}
+
+.container-warn-text {
+  font-size: 13px;
+  width: 80%;
+  padding-top: 10px;
+  padding: 10px;
+  background-image: linear-gradient(to right, #9D1047, #da6491);
+}
+
+@media(min-width: 900px) {
+  .creditOffers {
+    justify-content: center;
+    padding-top: 5vh;
+  }
 }
