alteração de api de bancos para consumo de json - api não está mais disponível

--- a/rendimentus/src/components/profile/profile.css
+++ b/rendimentus/src/components/profile/profile.css
@@ -47,7 +47,7 @@ p {
   display: block;
   color: #E3B15A;
   width: 100vw;
-  position: fixed;
+  /* position: fixed; */
   bottom: 0px;
   height: 80px;
 }
