--- a/rendimentus/src/components/header/header.css
+++ b/rendimentus/src/components/header/header.css
@@ -33,8 +33,8 @@
 
 .header {
   background: #1E2044;
-  position: fixed;
-  top: 0px;
+  /* position: fixed;
+  top: 0px; */
   height: 14vh;
   width: 100vw;
 }
